--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -5,12 +5,17 @@
   &--gutters {
     margin-right: -65px;
   }
-
+  &--gutters-large {
+    margin-right: -100px;
+  }
   &--gutters > div{
     padding-right: 65px;
     box-sizing: border-box;
   }
-
+  &--gutters-large > div{
+    padding-right: 100px;
+    box-sizing: border-box;
+  }
   &__b-margin-until-medium{
     margin-bottom: 1rem;
   }
@@ -27,7 +32,10 @@
     &__medium-4--larger{
       width: 37%;
     }
-
+    &__medium-6{
+      float: left;
+      width: 50%;
+    }
     &__medium-8{
       float: left;
       width: 66.66%;
