--- a/app/assets/styles/modules/_feature-item.css
+++ b/app/assets/styles/modules/_feature-item.css
@@ -8,7 +8,7 @@
   &__icon{
     display: block;
     margin: 0 auto;
-    @media atSmall {
+    @mixin atSmall{
       position: absolute;
       left: 0;
     }
