--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -21,7 +21,7 @@
     padding-right: 7px;
     @mixin atMedium{
       padding-right: 20px;
-      float: right;
+      float: left;
       display: block;
     }
   }
@@ -45,6 +45,10 @@
       font-size: 1rem;
       padding: 12px 0;
       background-color: transparent;
+
+      &.is-current-link{
+        color: #fabb69;
+      }
     }
   }
 }
